# reservation-calendar

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-backend  README.md  build.sh  docker-compose.yml  docker-repos.env  fly.toml  nginx.conf  pyproject.toml
.github/workflows/: ci.yaml
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: main.py
frontend/: .env.prod  eslint.config.js  index.html  package-lock.json  package.json
frontend/public/docs/: privacy-policy.md  terms-of-service.md
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CalendarNotFound.tsx  CalendarTable.jsx  MobileCalendarView.jsx  Modal.jsx  Navbar.jsx  PoweredByFooter.jsx  PublicCalendarsSection.jsx  ReservationList.jsx  ReservationManager.jsx  ReservationModal.jsx  ReservationModal.tsx  ReservationUpdateModal.jsx  Reserve.jsx  Skeleton.jsx  SlotButton.jsx  modal.css  reservationlist.css  reserve.css
frontend/src/hooks/: useReservation.js  useReservationModal.js  useWeekNavigation.js
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  PrivacyPage.jsx  ReservationList.jsx  ReservationListPage.jsx  Reserve.jsx  TermsPage.jsx  VerifyEmail.jsx
frontend/src/services/: api.js  auth.js  authService.js
frontend/src/utils/: timeSlots.js
k8s/: .gitignore  main.tf  outputs.tf  provides.tf  terraform.tfvars  variables.tf
k8s/charts/: README.md
src/: main.py  migrate_times.py  scheduler.py
src/api/: auth_api.py  chatbot_api.py  reservation_api.py
src/auth/: auth.py  email_verification.py
src/common/: db.py  logger.py
src/dependencies/: rate_limits.py
src/models/: chatbot.py  reservation.py  user.py
src/schemas/: chatbot.py  reservation.py  user.py
src/services/: chatbot_service.py  email_service.py
src/tasks/: celery_app.py  celery_tasks.py  cleanup_past_reservations.py  scheduler.py
tests/: conftest.py  test_add_reservation.py  test_auth_api.py  test_calendars.py  test_cleanup_task.py  test_dashboard.py  test_email_service.py  test_health.py  test_public_reservations.py  test_reservation_api.py  test_reservations.py
tests/utils/: auth_mock.py  base.py  db_mock.py  fixtures.py
(+58 files in other folders)
