[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Reservation System with AI Chatbot"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.15"
fastapi = "^0.115.8"
uvicorn = {version = "0.20.0", extras = ["standard"]}
# Database and ORM
sqlalchemy = "1.4.31"
asyncpg = "^0.30.0"
# AI Chatbot dependencies
httpx = "^0.28.0"  # For making async HTTP calls to Perplexity API
pydantic = {extras = ["email"], version = "^2.12.5"}  # For data validation and settings management
python-dotenv = "^1.0.0"  # For loading environment variables (e.g., API keys)
# Other utilities
aiohttp = "3.10.11"
apscheduler = "^3.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^22.10.0"
ruff = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"