[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.8"
uvicorn = {version = "0.15.0", extras = ["standard"]}
pytest = "^8.3.4"
aiohttp = "3.10.11"
black = "24.8.0"
sqlalchemy = "1.4.31"
psycopg2-binary = "2.9.3"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
